<resources>
    <string name="app_name">Project2_Wellness_Wizard_App</string>
    <string name="wellness_wizard">Wellness Wizard</string>
    <string name="user_menu">User Menu</string>
    <string name="account">Account</string>
    <string name="add_vit_med">Add Vit/Med</string>
    <string name="view_vit_med">View Vit/Med</string>
    <string name="get_workout">Get Workout</string>
    <string name="track_water">Track Water</string>
    <string name="track_food">Track Food</string>
    <string name="track_weight">Track Weight</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_wellness_wizard">Welcome to Wellness Wizard!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="usernameInfo">Username:</string>
    <string name="passwordInfo">Password:</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_vit_med2">Add Vit/Med</string>
    <string name="name">Name:</string>
    <string name="time">Time:</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="back2">Back</string>
    <string name="add">Add</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="manage_users">Manage Users</string>
    <string name="add_workout">Add Workout</string>
    <string name="vit_med">Vit/Med</string>
    <string name="get_workout_label">Get Workout</string>
    <string name="generate_workout">Generate Workout</string>
    <string name="workout_will_display_here">Workout will display here</string>
    <string name="enter_name">Enter name</string>
    <string name="morning_noon_evening">Morning/Noon/Evening</string>
    <string name="water_intake">Water Intake</string>
    <string name="add_intake">Add Intake</string>
    <string name="ml">mL</string>
    <string name="enter_water_intake">Enter Water intake</string>
    <string name="start_tracking">Start Tracking!</string>
    <string name="food_intake">Food Intake</string>
    <string name="food">Food:</string>
    <string name="enter_food">Enter Food</string>
    <string name="cal">Cal:</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="track_weight2">Track Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="lbs">lbs</string>
    <string name="add_weight">Add Weight</string>

    <string name="nothing_to_show_start_tracking_water">Nothing to show, start tracking water!</string>
    <string name="preference_file_key">examplePreferenceFileNameUserInfo</string>
    <string name="preference_userId_key">examplePreferenceUserIdKeyUserInfo</string>
    <string name="admin_menu2">Admin Menu</string>
    <string name="back3">Back</string>
    <string name="nothing_to_show_start_tracking_weight">Nothing to show. Start tracking weight!</string>
    <string name="no_food_to_show_strack_tracking">No food to show, strack tracking!</string>
    <string name="manage_users_label">Manage Users</string>
    <string name="delete_user">Delete User</string>
    <string name="enter_username_to_delete">Enter Username to Delete</string>
    <string name="no_users">No Users</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="username2">Username:</string>
    <string name="password2">Password:</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="create_account">Create Account</string>

    <string name="add_workout3">Add Workout</string>
    <string name="enter_new_workout_here">Enter New Workout Here</string>
    <string name="add_workout2">Add Workout</string>

    <string name="view_vitamin_medication_list">View Vitamin/Medication List</string>
    <string name="user_menu2">User Menu</string>

</resources>