<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F0FD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WellnessWizardTitleTextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:shadowColor="#6417F8"
        android:text="@string/wellness_wizard"
        android:textAlignment="center"
        android:textColor="#8143F8"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userMenuTextView"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_menu"
        android:textAlignment="center"
        android:textColor="#310486"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WellnessWizardTitleTextView" />

    <Button
        android:id="@+id/accountSettingsButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userMenuTextView" />

    <Button
        android:id="@+id/addVitMedButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_vit_med"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountSettingsButton" />

    <Button
        android:id="@+id/viewVitMedButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_vit_med"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addVitMedButton" />

    <Button
        android:id="@+id/getWorkoutButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/get_workout"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewVitMedButton" />

    <Button
        android:id="@+id/trackWaterButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_water"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getWorkoutButton" />


    <Button
        android:id="@+id/trackFoodButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_food"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackWaterButton" />

    <Button
        android:id="@+id/trackWeightButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_weight"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackFoodButton" />

    <Button
        android:id="@+id/adminMenuButton"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/admin_menu2"
        android:textAlignment="center"
        android:textSize="16sp"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackWeightButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminMenuButton" />


</androidx.constraintlayout.widget.ConstraintLayout>