<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F0FD"
    tools:context=".AddVitMedActivity">

    <TextView
        android:id="@+id/WellnessWizardTitleTextView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:shadowColor="#6417F8"
        android:text="@string/wellness_wizard"
        android:textAlignment="center"
        android:textColor="#8143F8"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addVitMedLabelTextView"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_vit_med2"
        android:textAlignment="center"
        android:textColor="#310486"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WellnessWizardTitleTextView" />

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addVitMedLabelTextView" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/nameLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/addVitMedLabelTextView" />

    <TextView
        android:id="@+id/timeLabelTextView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

    <CheckBox
        android:id="@+id/morningCheckBox"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/morning"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/timeLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/timeLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <CheckBox
        android:id="@+id/noonCheckBox"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/noon"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/timeLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/morningCheckBox"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <CheckBox
        android:id="@+id/eveningCheckBox"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/evening"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/timeLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/noonCheckBox"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <Button
        android:id="@+id/addVitMedButton2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="300dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addVitMedBackButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/back2"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addVitMedButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>